--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,10 @@
 		<jdk.version>1.6</jdk.version>
 		<spring.version>3.2.13.RELEASE</spring.version>
 		<jstl.version>1.2</jstl.version>
+		<sonar.projectKey>Bujji120_spring3-mvc-maven-xml-hello-world</sonar.projectKey>
+  		<sonar.organization>bujji120</sonar.organization>
+  		<sonar.host.url>https://sonarcloud.io</sonar.host.url>
+  		<sonar.login>f492c0a138b9ae85ea878224b2effe3d5f544b48</sonar.login>
 	</properties>
 
 	<dependencies>
